Change <h4> to <h3> to fix skipped heading Delete <a> in <h3> and wrap the whole <li> inside an <a> to fix redundant links issue Empty alt text Change h4 a to h3 in sponsors-logo class on _supporters.scss

--- a/src/assets/scss/_supporters.scss
+++ b/src/assets/scss/_supporters.scss
@@ -25,7 +25,7 @@
 .sponsors-body {
 	padding: 1em 0;
 
-	h4 a {
+	h3 {
 		color: $pink;
 	}
 }
